--- a/public/views/note.html
+++ b/public/views/note.html
@@ -1,3 +1,3 @@
-<div><span id="noteContent" ng-click="switchNoteArea()" ng-show="!switch"/>{{thisNote.content}}</div>
-<textarea ng-show="switch" ng-model="thisNote.content"></textarea>
-<button ng-click="updateNote()" ng-show="switch">update</button>
+<div><pre id="noteContent" ng-click="switchNoteArea()" ng-if="!switch">{{thisNote.content}}</pre></div>
+<textarea ng-if="switch" ng-model="thisNote.content" id="textbox"></textarea>
+<button ng-click="updateNote()" ng-if="switch">update</button>
