--- a/public/views/home.html
+++ b/public/views/home.html
@@ -38,4 +38,17 @@
               
             </ul>
           </div><!-- /.todo -->
+          <div>
+            <div class="input-group">
+              
+              <input type="textarea" ng-model="newNote.title" class="form-control"></input>
+              <span class="input-group-btn">
+                <button class="btn btn-primary" type="submit" ng-click="addNote()">Post</button>
+              </span>
+              
+              
+              
+            </div>
+          </div>
+          
     
